--- a/programming/language/python/python-elementary/pspec.xml
+++ b/programming/language/python/python-elementary/pspec.xml
@@ -12,31 +12,45 @@
         <IsA>library</IsA>
         <Summary>Elementary Python binding</Summary>
         <Description>python-elementary is the Python binding of Elementary widget set.</Description>
-        <Archive sha1sum="b50813a3cc910b704f2ff712dd96ace84e353c9f" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-elementary-0.5.0_49588.tar.bz2</Archive>
+        <!--<Archive sha1sum="b50813a3cc910b704f2ff712dd96ace84e353c9f" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-elementary-0.5.0_49588.tar.bz2</Archive>-->
+        <Archive sha1sum="390ccf8a9d450978e33ce756284846108689a90a" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-elementary-0.7.3.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pyrex</Dependency>
-            <Dependency>cython</Dependency>
-            <Dependency versionFrom="0.7.0.49539">elementary-devel</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
+            <Dependency versionFrom="0.7.0_52995">elementary-devel</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
         </BuildDependencies>
+        <Patches>
+            <Patch level="1">fix-check-elementary-version.patch</Patch>
+        </Patches>
     </Source>
 
     <Package>
         <Name>python-elementary</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.7.0.49539">elementary</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-ecore</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-e_dbus</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-edje</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
+            <Dependency versionFrom="0.7.0_52995">elementary</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="data">/usr/lib/pkgconfig</Path>
+            <Path fileType="data">/usr/share/python-elementary</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-10-04</Date>
+            <Version>0.7.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-06-09</Date>
             <Version>0.5.0_49588</Version>
