--- a/programming/language/python/python-ethumb/pspec.xml
+++ b/programming/language/python/python-ethumb/pspec.xml
@@ -12,29 +12,44 @@
         <IsA>library</IsA>
         <Summary>Python bindings for Ethumb thumbnailing library</Summary>
         <Description>python-ethumb is the Python bindings for Ethumb thumbnailing library.</Description>
-        <Archive sha1sum="aaa129a80e1522248ba12f4379faa4b894384503" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ethumb-0.2_49588.tar.bz2</Archive>
+        <!--<Archive sha1sum="aaa129a80e1522248ba12f4379faa4b894384503" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ethumb-0.2_49588.tar.bz2</Archive>-->
+        <Archive sha1sum="c91c1fe3168f5c436123202639961fba0b98e504" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-ethumb-0.7.3.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="0.1_49539">ethumb-devel</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas-devel</Dependency>
-            <Dependency versionFrom="0.12.1">cython</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">e_dbus-devel</Dependency>
+            <Dependency versionFrom="0.1.0_52995">ethumb-devel</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
         </BuildDependencies>
-        <Patches>
-            <Patch level="1">fix-underlinking.patch</Patch>
-        </Patches>
     </Source>
 
     <Package>
         <Name>python-ethumb</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.1_49539">ethumb</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">e_dbus</Dependency>
+            <Dependency versionFrom="0.1.0_52995">ethumb</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="data">/usr/lib/pkgconfig</Path>
+            <Path fileType="data">/usr/share/python-ethumb</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-10-04</Date>
+            <Version>0.7.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-06-21</Date>
             <Version>0.2_49588</Version>
