--- a/programming/language/python/python-evas/pspec.xml
+++ b/programming/language/python/python-evas/pspec.xml
@@ -12,23 +12,23 @@
         <IsA>library</IsA>
         <Summary>Evas Python bindings</Summary>
         <Description>python-evas is the Python binding of Evas canvas library.</Description>
-        <Archive sha1sum="a91200a2bfbe39fc81f13e73338319ca8e055060" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-evas-0.5.0_49588.tar.bz2</Archive>
+        <!--<Archive sha1sum="a91200a2bfbe39fc81f13e73338319ca8e055060" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-evas-0.5.0_49588.tar.bz2</Archive>-->
+        <Archive sha1sum="11802867a00e84495cdc8315e7ff4530b1023de8" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-evas-0.7.3.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pyrex</Dependency>
-            <Dependency>cython</Dependency>
-            <Dependency versionFrom="0.9.9.49539">evas-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-evas</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.9.9.49539">evas</Dependency>
-            <Dependency versionFrom="0.9.9.49539">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="data">/usr/share/python-evas</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
@@ -37,7 +37,7 @@
         <Name>python-evas-devel</Name>
         <Summary>Development files for python-evas</Summary>
         <RuntimeDependencies>
-            <Dependency release="1">python-evas</Dependency>
+            <Dependency release="2">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="header">/usr/include</Path>
@@ -45,6 +45,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-10-03</Date>
+            <Version>0.7.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-06-09</Date>
             <Version>0.5.0_49588</Version>
