Description and translation fixes.

--- a/programming/language/perl/perl-GSSAPI/translations.xml
+++ b/programming/language/perl/perl-GSSAPI/translations.xml
@@ -2,6 +2,7 @@
 <PISI>
     <Source>
         <Name>perl-GSSAPI</Name>
-        <Summary xml:lang="tr">GSSAPI kütüphanesine erişim sağlayan perl modülü</Summary>
+        <Summary xml:lang="tr">GSSAPI kitaplığına erişim sağlayan perl modülü</Summary>
+        <Description xml:lang="tr">perl-GSSAPI, RFC 2744'de açıklandığı gibi GSSAPI C bağlayıcılarını kullanan bir perl eklentisidir.</Description>
     </Source>
 </PISI>
