--- a/programming/language/perl/perl-Error/translations.xml
+++ b/programming/language/perl/perl-Error/translations.xml
@@ -2,6 +2,7 @@
 <PISI>
     <Source>
         <Name>perl-Error</Name>
-        <Summary xml:lang="tr">Hata/istisna yakalama ve işlemeye yarayan Nesne Yönelimli mantıkla yazılmış bir perl modülü</Summary>
+        <Summary xml:lang="tr">Hata/istisna yakalama ve işlemeye yarayan Nesne yönelimli mantıkla yazılmış bir perl modülü</Summary>
+        <Description xml:lang="tr">perl-Error, Hata/istisna yakalama ve işleme işlerini gören, Nesne yönelimli mantıkla yazılmış bir perl modülüdür.</Description>
     </Source>
 </PISI>
