description and translation fixes.

--- a/programming/language/perl/perl-SVN-Simple/translations.xml
+++ b/programming/language/perl/perl-SVN-Simple/translations.xml
@@ -3,5 +3,6 @@
     <Source>
         <Name>perl-SVN-Simple</Name>
         <Summary xml:lang="tr">SVN için basit bir perl arayüzü</Summary>
+        <Description xml:lang="tr">perl-SVN-Simple, subversionla ilgili işlemler yapmak için kullanılan bir perl arayüzüdür.</Description>
     </Source>
 </PISI>
