--- a/programming/language/python/python-pylint/pspec.xml
+++ b/programming/language/python/python-pylint/pspec.xml
@@ -26,6 +26,9 @@
             <Dependency>python-logilab-astng</Dependency>
             <Dependency>python-logilab-common</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pylint</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="executable">/usr/bin</Path>
