We do not forget adding description to pspec.xml's, isnt it, Serdar Dalgıç, my friend? :P

--- a/programming/language/perl/perl-AppConfig/pspec.xml
+++ b/programming/language/perl/perl-AppConfig/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Perl module for reading configuration files and parsing command line arguments</Summary>
+        <Description>perl-AppConfig is a Perl module for managing application configuration information. It maintains the state of any number of variables and provides methods for parsing configuration files, command line arguments and CGI script parameters.</Description>
         <Archive sha1sum="177d362530b532ee70dd59ab899eb83664b7bbda" type="targz">mirrors://cpan/authors/id/A/AB/ABW/AppConfig-1.66.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
