add descriptions to perl modules, dedicated to Gokcen :p

--- a/programming/language/perl/perl-Class-Data-Inheritable/pspec.xml
+++ b/programming/language/perl/perl-Class-Data-Inheritable/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Inheritable, overridable class data</Summary>
+        <Description>perl-Class-Data-Inheritable is for creating accessor/mutators to class data. That is, if you want to store something about your class as a whole (instead of about a single object). This data is then inherited by your subclasses and can be overriden.</Description>
         <Archive sha1sum="522c7e948f126c0d0ab1f37b5e993f4fc5ce65de" type="targz">mirrors://cpan/authors/id/T/TM/TMTM/Class-Data-Inheritable-0.08.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
