--- a/programming/language/perl/perl-Class-Singleton/pspec.xml
+++ b/programming/language/perl/perl-Class-Singleton/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic-2</License>
         <IsA>library</IsA>
         <Summary>Implementation of a Singleton class for Perl</Summary>
+        <Description>perl-Class-Singleton module is a perl module that implements Singleton class for Perl.</Description>
         <Archive sha1sum="29c4c6b6cfb9af9eaa61582f3f3b10015f6ea900" type="targz">mirrors://cpan/authors/id/A/AB/ABW/Class-Singleton-1.4.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
