--- a/programming/language/perl/perl-Config-Tiny/pspec.xml
+++ b/programming/language/perl/perl-Config-Tiny/pspec.xml
@@ -12,6 +12,7 @@
         <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>A module for reading and writing .ini style files with as little code as possible</Summary>
+        <Description>perl-Config-Tiny is a perl class to read and write .ini style configuration files with as little code as possible, reducing load time and memory overhead.</Description>
         <Archive sha1sum="e93cbacfa0a3d0ec4c8a719cc82339f1866fee76" type="targz">mirrors://cpan/authors/id/A/AD/ADAMK/Config-Tiny-2.13.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
