--- a/programming/language/perl/perl-DBD-SQLite/pspec.xml
+++ b/programming/language/perl/perl-DBD-SQLite/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>SQLite driver for the Perl5 Database Interface (DBI)</Summary>
+        <Description>perl-DBD-SQLite is a Perl DBI driver for SQLite, that includes the entire thing in the distribution. So in order to get a fast transaction capable RDBMS working for your perl project you simply have to install this module, and nothing else.</Description>
         <Archive sha1sum="6c189fba1a4ec4b7e792b3c0b9c9020d5cf7cb8e" type="targz">mirrors://cpan/authors/id/A/AD/ADAMK/DBD-SQLite-1.31.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
