--- a/programming/language/perl/perl-DateTime-Locale/pspec.xml
+++ b/programming/language/perl/perl-DateTime-Locale/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Localization support for perl-DateTime</Summary>
+        <Description>perl-DateTime-Locale modules provide localization data for the DateTime.pm class.</Description>
         <Archive sha1sum="780fbd746d5f4c323b20771e6c7aef98d17d9e86" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/DateTime-Locale-0.45.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
