--- a/programming/language/perl/perl-DateTime/pspec.xml
+++ b/programming/language/perl/perl-DateTime/pspec.xml
@@ -12,6 +12,7 @@
         <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>A date and time object</Summary>
+        <Description>perl-DateTime module is the Perl distribution DateTime.</Description>
         <Archive sha1sum="322354287beaa46ae77f15d98ceaae4334a1b141" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/DateTime-0.63.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
