--- a/programming/language/perl/perl-File-HomeDir/pspec.xml
+++ b/programming/language/perl/perl-File-HomeDir/pspec.xml
@@ -11,7 +11,8 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Perl module for finding home directories on any platform</Summary>
-	<Archive sha1sum="2de9d007c35b3ef0e37c84849cc6e49aa081e2e3" type="targz">mirrors://cpan/authors/id/A/AD/ADAMK/File-HomeDir-0.93.tar.gz</Archive>
+        <Description>perl-File-HomeDir is a perl module for locating the directories that are "owned" by a user (typicaly your user) and to solve the various issues that arise trying to find them consistently across a wide variety of platforms.</Description>
+        <Archive sha1sum="2de9d007c35b3ef0e37c84849cc6e49aa081e2e3" type="targz">mirrors://cpan/authors/id/A/AD/ADAMK/File-HomeDir-0.93.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
             <Dependency>perl-File-Which</Dependency>
