--- a/programming/language/perl/perl-Makefile-Parser/pspec.xml
+++ b/programming/language/perl/perl-Makefile-Parser/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <IsA>app:console</IsA>
         <Summary>A Perl module that is a simple parser for Makefiles</Summary>
-        <Description>perl-Makefile-Parser is a simple parsing perl module for Makefiles</Description>
+        <Description>perl-Makefile-Parser is a simple parsing perl module for Makefiles.</Description>
         <Archive sha1sum="89dbf91503a46b337b4d129a4716bbcda6f9d4f6" type="targz">mirrors://cpan/authors/id/A/AG/AGENT/Makefile-Parser-0.211.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
