--- a/programming/language/perl/perl-Params-Validate/pspec.xml
+++ b/programming/language/perl/perl-Params-Validate/pspec.xml
@@ -10,7 +10,8 @@
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
-        <Summary>A Perl module to provide a flexible system for validating method/function call parameters</Summary>
+        <Summary>Validate method/function parameters for perl</Summary>
+        <Description>perl-Params-Validate is a perl module to provide a flexible system for validating method/function call parameters.</Description>
         <Archive sha1sum="6001152f60275f224cbfc8afb821298328693746" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/Params-Validate-0.95.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
