--- a/programming/language/perl/perl-Template-Toolkit/pspec.xml
+++ b/programming/language/perl/perl-Template-Toolkit/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Perl Template Toolkit</Summary>
+        <Description>perl-Template-Toolkit is a collection of modules which implement a fast, flexible, powerful and extensible template processing system.</Description>
         <Archive sha1sum="5e553cdb97a594e0d81c5bd7c9b5664f963ffa4f" type="targz">mirrors://cpan/authors/id/A/AB/ABW/Template-Toolkit-2.22.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
