--- a/programming/language/perl/perl-B-Keywords/pspec.xml
+++ b/programming/language/perl/perl-B-Keywords/pspec.xml
@@ -10,7 +10,8 @@
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
-        <Summary>Lists of reserved barewords and symbol names</Summary>
+        <Summary>Perl module consisting lists of reserved barewords and symbol names</Summary>
+        <Description>perl-B-Keywords module consists of the lists of reserved barewords and symbol names.</Description>
         <Archive sha1sum="e839451c3d986f5844c932b3a995134c076ce898" type="targz">mirrors://cpan/authors/id/F/FL/FLORA/B-Keywords-1.10.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
