--- a/programming/language/perl/perl-Class-Accessor/pspec.xml
+++ b/programming/language/perl/perl-Class-Accessor/pspec.xml
@@ -10,7 +10,8 @@
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
-        <Summary>Automated accessor generation</Summary>
+        <Summary>Automated accessor generation perl module</Summary>
+        <Description>perl-Class-Accessor module automagically generates accessors/mutators for your class.</Description>
         <Archive sha1sum="e91317b429f5618c4d0264c699a1f266635f87df" type="targz">mirrors://cpan/authors/id/K/KA/KASEI/Class-Accessor-0.34.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
