--- a/programming/language/tcl/tcltk/pspec.xml
+++ b/programming/language/tcl/tcltk/pspec.xml
@@ -14,7 +14,7 @@
         <Description>Tk is an X Windows widget set designed to work closely with the tcl scripting language. It allows you to write simple programs with full featured GUIs in only a little more time then it takes to write a text based interface.</Description>
         <Archive sha1sum="ea13b9d0bf611c7671c488bc0b5f3f739ad7e399" type="targz">mirrors://sourceforge/tcl/tk8.5.8-src.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency version="current">tcl-devel</Dependency>
+            <Dependency version="8.5.8">tcl-devel</Dependency>
             <Dependency>libXft-devel</Dependency>
             <Dependency>libXScrnSaver-devel</Dependency>
             <Dependency>fontconfig-devel</Dependency>
@@ -28,7 +28,7 @@
     <Package>
         <Name>tcltk</Name>
         <RuntimeDependencies>
-            <Dependency version="current">tcl</Dependency>
+            <Dependency version="8.5.8">tcl</Dependency>
             <Dependency>libXft</Dependency>
             <Dependency>libXScrnSaver</Dependency>
             <Dependency>fontconfig</Dependency>
