--- a/programming/language/perl/perl-Locale-Codes/pspec.xml
+++ b/programming/language/perl/perl-Locale-Codes/pspec.xml
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-10-13</Date>
+            <Version>3.14</Version>
+            <Comment>Using curPERL() for perl version</Comment>
+            <Name>Fatih Arslan</Name>
+            <Email>farslan@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-10-13</Date>
             <Version>3.14</Version>
