numpy -> python-numpy

--- a/programming/language/python/python-biggles/pspec.xml
+++ b/programming/language/python/python-biggles/pspec.xml
@@ -27,7 +27,7 @@
         <Name>python-biggles</Name>
         <RuntimeDependencies>
             <Dependency>plotutils</Dependency>
-            <Dependency>numpy</Dependency>
+            <Dependency>python-numpy</Dependency>
             <Dependency>libXext</Dependency>
         </RuntimeDependencies>
         <Files>
