--- a/programming/language/python/python-appinfo/pspec.xml
+++ b/programming/language/python/python-appinfo/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>Package metadata service</Summary>
         <Description>python-appinfo is python module for creating or getting package information from defined remote appinfo server.</Description>
-        <Archive sha1sum="78d1bfff6585c555dc035cb7bd4ba26a749471d1" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/appinfo-0.1.tar.gz</Archive>
+        <Archive sha1sum="35dd5d7eb0285053ba27737fe811cdfe882f83fe" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/appinfo-0.1.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-10-20</Date>
+            <Version>0.1</Version>
+            <Comment>Table consistency check added</Comment>
+            <Name>Gökmen GÖKSEL</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-10-20</Date>
             <Version>0.1</Version>
