--- a/programming/language/python/python-networkmanager/pspec.xml
+++ b/programming/language/python/python-networkmanager/pspec.xml
@@ -12,10 +12,7 @@
         <IsA>library</IsA>
         <Summary>A Python interface to NetworkManager via DBus</Summary>
         <Description>A Python interface to NetworkManager over DBus. Designed to hide the complexities of python-dbus and provide a simplified api to interacting with network manager to control network configuration tasks.</Description>
-        <Archive sha1sum="b47a45da0de430da0bac133cae1a61444570a5f7" type="tarbz2">http://cekirdek.pardus.org.tr/~ozan/dist/sources/python-networkmanager-20100630.tar.bz2</Archive>
-        <Patches>
-            <Patch level="1">access_point_details.patch</Patch>
-        </Patches>
+        <Archive sha1sum="16fbafe103242e2d665c411064e0f80075660adc" type="tarbz2">http://cekirdek.pardus.org.tr/~ozan/dist/sources/python-networkmanager-0.0_20101021.tar.bz2</Archive>
     </Source>
 
     <Package>
@@ -31,6 +28,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-10-21</Date>
+            <Version>0.0_20101021</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>20100630</Version>
