--- a/programming/language/python/python-papyon/pspec.xml
+++ b/programming/language/python/python-papyon/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python libraries for MSN Messenger network</Summary>
         <Description>papyon is the library behind the MSN connection manager for Telepathy.</Description>
-        <Archive sha1sum="1c7f406cbdd9c186aa33693b72496b5f69b52bf8" type="targz">http://telepathy.freedesktop.org/releases/papyon/papyon-0.4.9.tar.gz</Archive>
+        <Archive sha1sum="d4e79fd15273a5745b29231f303a287d28996ec0" type="targz">http://www.freedesktop.org/software/papyon/releases/papyon-0.5.2.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>pyopenssl</Dependency>
             <Dependency>python-pygobject</Dependency>
@@ -34,6 +34,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-10-21</Date>
+            <Version>0.5.2</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-07-14</Date>
             <Version>0.4.9</Version>
