--- a/programming/language/python/python-mutagen/pspec.xml
+++ b/programming/language/python/python-mutagen/pspec.xml
@@ -5,8 +5,8 @@
         <Name>python-mutagen</Name>
         <Homepage>http://code.google.com/p/mutagen</Homepage>
         <Packager>
-            <Name>İnanç Yıldırgan</Name>
-            <Email>inancyildirgan@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
