Sync translations with branch.

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -17,9 +17,8 @@
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
         <Patches>
-            <!-- Sync translations from branches/stable/l10n-kde/tr using sync-branch-translations.sh
-            <Patch level="1">BRANCH.patch</Patch>
-            -->
+            <!-- Sync translations from branches/stable/l10n-kde/tr using sync-branch-translations.sh -->
+            <Patch level="0">BRANCH.patch</Patch>
 
             <!-- Include playground-network translations too -->
             <Patch level="1">add-playground-network-dir.patch</Patch>
@@ -60,8 +59,6 @@
 
             <!-- Fix for #13842 -->
             <Patch level="1">fix-xdg-user-dirs-translations.diff</Patch>
-
-            <Patch level="1">fix-weather-info-translation.diff</Patch>
         </Patches>
     </Source>
     <Package>
@@ -87,6 +84,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="53">
+            <Date>2010-10-26</Date>
+            <Version>4.5.2</Version>
+            <Comment>Sync translations with branch.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="52">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
