--- a/desktop/kde/l10n/kde-l10n-tr/translations.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/translations.xml
@@ -3,5 +3,7 @@
     <Source>
         <Name>kde-l10n-tr</Name>
         <Summary xml:lang="de">Türkisches KDE4-Internationalisierungspaket</Summary>
+        <Summary xml:lang="tr">KDE4 Türkçe yerelleştirme paketi</Summary>
+        <Description xml:lang="tr">kde-l10n-tr, KDE uygulamalarını Türkçe yerelde kullanmanızı sağlayan yerelleştirme paketidir.</Description>
     </Source>
 </PISI>
