--- a/kernel/default/kernel/TODO
+++ b/kernel/default/kernel/TODO
@@ -3,6 +3,7 @@ TODO for 2011 kernel
 
 (-) SCSI HPSA SAS driver enabled in config, try it on the servers
 (-) ATH3K bt firmware
+(-) perf package
 (+) Grab lirc from staging, sync from fedora
 (+) Sync AuFS from Ubuntu
 (/50) Toshiba BT rfkill driver enabled, check omnibook
