--- a/programming/language/python/pyopenssl/pspec.xml
+++ b/programming/language/python/pyopenssl/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>pyopenssl</Name>
-        <Homepage>http://pyopenssl.sourceforge.net/</Homepage>
+        <Homepage>http://launchpad.net/pyopenssl</Homepage>
         <Packager>
             <Name>Renan Çakırerk</Name>
             <Email>renan@pardus.org.tr</Email>
@@ -12,10 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the OpenSSL library</Summary>
         <Description>This module is a rather thin wrapper around (a subset of) the OpenSSL library. A lot of the object methods do nothing more than calling a corresponding function in the OpenSSL library.</Description>
-        <Archive sha1sum="50f4214dc18d8b90b9c6a7f50d6c004edad997eb" type="targz">mirrors://sourceforge/pyopenssl/pyOpenSSL-0.8.tar.gz</Archive>
-        <Patches>
-            <Patch level="1">test.patch</Patch>
-        </Patches>
+        <Archive sha1sum="11c956d317ab2b1628937a2681acc31f4b890fe8" type="targz">http://pypi.python.org/packages/source/p/pyOpenSSL/pyOpenSSL-0.10.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -27,6 +24,17 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-10-27</Date>
+            <Version>0.10</Version>
+            <Comment>
+                * Version bump
+                * Update homepage
+                * Remove test patch
+            </Comment>
+            <Name>Jérôme Schneider</Name>
+            <Email>jerome.schneider@gmail.com</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>0.8</Version>
