--- a/programming/language/python/python-gtksourceview/pspec.xml
+++ b/programming/language/python/python-gtksourceview/pspec.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>python-pygtksourceview</Name>
+        <Name>python-gtksourceview</Name>
         <Homepage>http://www.gnome.org/</Homepage>
         <Packager>
             <Name>Burak Çalışkan</Name>
@@ -12,12 +12,12 @@
         <IsA>library</IsA>
         <Summary>Python bindings of gtksourceview</Summary>
         <Description>python-pygtksourceview provides Python bindings of gtksourceview.</Description>
-        <Archive sha1sum="480742c6ea15e2c6f3d864fae4708ef528fade0f" type="tarbz2">mirrors://gnome/pygtksourceview/2.6/pygtksourceview-2.6.0.tar.bz2</Archive>
+        <Archive sha1sum="2a8da2ade949b5d89d3217809ecb4a19127590ab" type="tarbz2">mirrors://gnome/pygtksourceview/2.10/pygtksourceview-2.10.1.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pygtk</Dependency>
+            <Dependency>pygtk-devel</Dependency>
             <Dependency>gtk-doc</Dependency>
-            <Dependency>gtk2</Dependency>
-            <Dependency>gtksourceview</Dependency>
+            <Dependency>gtk2-devel</Dependency>
+            <Dependency>gtksourceview-devel</Dependency>
             <Dependency>docbook-xml4_1_2</Dependency>
         </BuildDependencies>
         <Patches>
@@ -26,12 +26,15 @@
     </Source>
 
     <Package>
-        <Name>python-pygtksourceview</Name>
+        <Name>python-gtksourceview</Name>
         <RuntimeDependencies>
             <Dependency>pygtk</Dependency>
             <Dependency>gtk2</Dependency>
             <Dependency>gtksourceview</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>python-pygtksourceview</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -40,6 +43,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-10-30</Date>
+            <Version>2.10.0</Version>
+            <Comment>Version bump</Comment>
+            <Name>Burak Çalışkan</Name>
+            <Email>burakclskn@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-08-22</Date>
             <Version>2.6.0</Version>
