--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -13,16 +13,15 @@
         <IsA>library</IsA>
         <Summary>A set of Python bindings for the Qt 4.x Toolkit</Summary>
         <Description>Qt is a set of C++ libraries and development tools that includes platform independent abstractions for graphical user interfaces, networking, threads, Unicode, regular expressions, SQL databases, SVG, OpenGL, XML, and user and application settings. PyQt implements 440 of these classes as a set of Python modules.</Description>
-        <Archive sha1sum="ba2953b4946d00022b8d86771936f065d18420e3" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-snapshot-4.8-eac5dd92c907.tar.gz</Archive>
+        <Archive sha1sum="e064ed38817bafde72f2a57679d80d40c7015afb" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-4.8.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="4.7.0_beta2">qt-devel</Dependency>
-            <Dependency releaseFrom="41">sip-devel</Dependency>
+            <Dependency versionFrom="4.11.2">sip-devel</Dependency>
             <Dependency versionFrom="4.7.0_beta2">qt-webkit</Dependency>
             <Dependency versionFrom="4.4.2">phonon-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
-            <Patch level="1">fix-scpk-and-flag-issue.diff</Patch>
         </Patches>
     </Source>
 
@@ -34,7 +33,7 @@
             <Dependency release="current">python-qt</Dependency>
             <Dependency release="current">python-qt-webkit</Dependency>
             <Dependency release="current">python-qt-phonon</Dependency>
-            <Dependency releaseFrom="41">sip-devel</Dependency>
+            <Dependency versionFrom="4.11.2">sip-devel</Dependency>
         </RuntimeDependencies>
         <Conflicts>
             <Package releaseTo="45">PyQt-webkit</Package>
@@ -53,7 +52,7 @@
         <Name>python-qt</Name>
         <RuntimeDependencies>
             <Dependency versionFrom="4.7.0_beta2">qt</Dependency>
-            <Dependency releaseFrom="41">sip</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>PyQt</Package>
@@ -122,6 +121,13 @@
     </Package>
 
     <History>
+        <Update release="54">
+            <Date>2010-10-31</Date>
+            <Version>4.8.1</Version>
+            <Comment>Version bump to 4.8.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="53">
             <Date>2010-10-13</Date>
             <Version>4.8_20100928</Version>
