--- a/programming/language/python/sip/pspec.xml
+++ b/programming/language/python/sip/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>SIP is a tool for generating bindings for C++ classes so that they can be used by Python</Summary>
         <Description>SIP is a tool for generating bindings for C and C++ libraries so that they can be used by Python. It takes any C or C++ libraries and converts them into Python extension modules.</Description>
-        <Archive sha1sum="16119f104b573b10feadb67a4138e708998bc226" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.11.2-snapshot-c93f5da3d4e4.tar.gz</Archive>
+        <Archive sha1sum="586a86a55553617e39b1df8376166d03d697184c" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.11.2.tar.gz</Archive>
         <Patches>
             <Patch level="1">no-strip.patch</Patch>
             <Patch>disable-rpaths.diff</Patch>
@@ -41,6 +41,13 @@
     </Package>
 
     <History>
+        <Update release="43">
+            <Date>2010-10-31</Date>
+            <Version>4.11.2</Version>
+            <Comment>Version bump to 4.11.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="42">
             <Date>2010-10-13</Date>
             <Version>4.11.2_20100928</Version>
