New stable release (2.8)

--- a/programming/language/llvm/pspec.xml
+++ b/programming/language/llvm/pspec.xml
@@ -11,7 +11,7 @@
         <License>NCSA</License>
         <Summary>The Low Level Virtual Machine</Summary>
         <Description>The LLVM Project is a collection of modular and reusable compiler and toolchain technologies. Despite its name, LLVM has little to do with traditional virtual machines, though it does provide helpful libraries that can be used to build them.</Description>
-        <Archive sha1sum="059fc21b0ec1b649c4a3dec81756e5f92aa131a2" type="targz">http://www.llvm.org/releases/2.7/llvm-2.7.tgz</Archive>
+        <Archive sha1sum="6d49fe039d28e8664de25491c775cb2c599e30c1" type="targz">http://www.llvm.org/releases/2.8/llvm-2.8.tgz</Archive>
         <BuildDependencies>
             <Dependency>tcl-devel</Dependency>
             <Dependency>ocaml</Dependency>
@@ -67,6 +67,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-11-01</Date>
+            <Version>2.8</Version>
+            <Comment>New stable release</Comment>
+            <Name>Fatih Aşıcı</Name>
+            <Email>fatih@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-10-13</Date>
             <Version>2.7</Version>
