Change plugin path to the new standart
BUG:COMMENT:14943

--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -50,7 +50,7 @@
             <Path fileType="data">/opt/sun-jdk/db/bin</Path>
             <Path fileType="data">/opt/sun-jdk/db/frameworks</Path>
             <Path fileType="data">/opt/sun-jdk/db/lib</Path>
-            <Path fileType="data">/usr/lib/nsbrowser/plugins</Path>
+            <Path fileType="data">/usr/lib/browser-plugins</Path>
             <Path fileType="data">/opt/sun-jdk/jre</Path>
             <Path fileType="data">/usr/share/applications</Path>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -117,6 +117,13 @@
     </Package>
 
     <History>
+        <Update release="29">
+            <Date>2010-11-01</Date>
+            <Version>1.6.0_p19</Version>
+            <Comment>Change plugin path to the new standart</Comment>
+            <Name>Fatih Arslan</Name>
+            <Email>farslan@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-13</Date>
             <Version>1.6.0_p19</Version>
