--- a/tex/language/texlive-lang-arabic/pspec.xml
+++ b/tex/language/texlive-lang-arabic/pspec.xml
@@ -24,8 +24,7 @@
              <Dependency>texlive-basic</Dependency>
          </RuntimeDependencies>
          <Replaces>
-             <Package>texlive-langarabic</Package>
-             <Package>tetex-texmf</Package>
+             <Package>texlive-langarab</Package>
          </Replaces>
         <Files>
             <Path fileType="config">/etc</Path>
