--- a/tex/language/texlive-lang-czechslovak/pspec.xml
+++ b/tex/language/texlive-lang-czechslovak/pspec.xml
@@ -21,14 +21,13 @@
 
     <Package>
         <Name>texlive-lang-czechslovak</Name>
-         <RuntimeDependencies>
-             <Dependency>texlive-basic</Dependency>
+        <RuntimeDependencies>
+            <Dependency>texlive-basic</Dependency>
             <Dependency>texlive-latex</Dependency>
             <Dependency>texlive-core</Dependency>
         </RuntimeDependencies>
         <Replaces>
-            <Package>tetex-texliveczechslovak</Package>
-            <Package>tetex-texmf</Package>
+            <Package>texlive-langczechslovak</Package>
         </Replaces>
         <Files>
             <Path fileType="config">/etc</Path>
