--- a/tex/language/texlive-lang-french/pspec.xml
+++ b/tex/language/texlive-lang-french/pspec.xml
@@ -24,9 +24,7 @@
              <Dependency>texlive-basic</Dependency>
          </RuntimeDependencies>
          <Replaces>
-             <Package>tetex-texşive-langfrench</Package>
-             <Package>tetex-texmf</Package>
-             <Package>tetex-extra</Package>
+             <Package>texlive-langfrench</Package>
          </Replaces>
         <Files>
             <Path fileType="config">/etc</Path>
