--- a/tex/language/texlive-lang-polish/pspec.xml
+++ b/tex/language/texlive-lang-polish/pspec.xml
@@ -26,10 +26,9 @@
              <Dependency>texlive-core</Dependency>
          </RuntimeDependencies>
          <Replaces>
-             <Package>tetex-polish</Package>
-             <Package>tetex-texmf</Package>
-             <Package>tetex-extra</Package>
+             <Package>texlive-langpolish</Package>
          </Replaces>
+            
         <Files>
             <Path fileType="config">/etc</Path>
             <Path fileType="executable">/usr/bin</Path>
