--- a/tex/language/texlive-lang-tibetan/pspec.xml
+++ b/tex/language/texlive-lang-tibetan/pspec.xml
@@ -24,8 +24,7 @@
              <Dependency>texlive-basic</Dependency>
          </RuntimeDependencies>
          <Replaces>
-             <Package>tetex-texlive-langtibetan</Package>
-             <Package>tetex-texmf</Package>
+             <Package>texlive-langtibetan</Package>
          </Replaces>
         <Files>
             <Path fileType="data">/usr/share</Path>
